--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="https://linkedin.com/in/poojitha-mahesh" target="_blank" class="social-link">
+                        <a href="https://www.linkedin.com/in/poojitha-m-s-430616200/" target="_blank" class="social-link">
                             <span>LinkedIn</span>
                         </a>
-                        <a href="https://github.com/poojitha-mahesh" target="_blank" class="social-link">
+                        <a href="https://github.com/poojitha-shetty" target="_blank" class="social-link">
                             <span>GitHub</span>
                         </a>
                     </div>
@@ -483,8 +483,8 @@
             <div class="footer-content">
                 <p>&copy; 2022 Poojitha Mahesh Shyla. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="https://linkedin.com/in/poojitha-mahesh" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/poojitha-mahesh" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/poojitha-m-s-430616200/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/poojitha-shetty" target="_blank">GitHub</a>
                 </div>
             </div>
         </div>
